Use self-sorting container for priority management
Much cleaner to just use a magic dict where the items are also sorting
themselves instead of running sorted() on the dict every time we loop
through it.

Much nicer than running N^2 sorts over the counter (but our N is low
because things are either running or quickly expired) and it maintains
priority levels on insert instead of re-calculating for every loop of
every element on every read.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ hypercorn = "^0.15.0"
 scheduler = "^0.8.4"
 pytz = "^2023.3.post1"
 pendulum = {version = "^3.0.0b1", allow-prereleases = true}
+sortedcontainers = "^2.4.0"
 
 [tool.poetry.scripts]
 awwdio = "awwdio.awwdio:cmd"
